Thu Mar  2 09:04:46 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* MAINTAINERS: Daniel Berlin is C++ maintainer.		

Thu Mar  2 08:55:35 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* MAINTAINERS: Mark Kettenis is the x86 architcture maintainer and
 	a joint GNU/Linux/x86 maintainer.  Nick Duffeck and Robert Lipe
 	share SCO/Unixware.  Nick Duffek and Peter Schauer share
 	Solaris/x86.

Wed Mar  1 22:12:35 2000  Andrew Cagney  <cagney@b1.cygnus.com>
	
	From Wed 23 Feb 2000 Fernando Nasser <fnasser@redhat.com>:
	* remote-sim.c (gdbsim_close): Call generic_mourn_inferior.
	* remote-rdi.c (arm_rdi_close): Ditto. 

Wed Mar  1 19:31:32 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* CONTRIBUTE (configure.in): Note that patches to configure are
 	not needed.

2000-03-01  Mark Kettenis  <kettenis@gnu.org>

	* MAINTAINERS: Correct my own mail address.

Wed Mar  1 11:26:07 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* MAINTAINERS: Document people with paperwork pending.

Wed Mar  1 00:49:06 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From 2000-02-28 Peter Schauer <pes@regent.e-technik.tu-muenchen.de>:
	Make NEW_PROC_ABI interface functional on Solaris x86.
	* sol-thread.c (ps_lgetLDT): Rewrite to use new
 	procfs_find_LDT_entry function from procfs.c, mostly copied from
 	lin-thread.c.
	* inferior.h, procfs.c (procfs_get_pid_fd): Removed, no longer
 	needed.

Wed Mar  1 00:34:55 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From 2000-02-26 Peter Schauer <pes@regent.e-technik.tu-muenchen.de>:
	* config/i386/tm-i386sol2.h (MERGEPID): Define.

Wed Mar  1 00:06:19 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From 1999-08-13 J.T. Conklin <jtc@redback.com>:
        * config/i386/tm-i386.h (FRAME_INIT_SAVED_REGS): Replace
        FRAME_FIND_SAVED_REGS.
        (i386_frame_init_saved_regs): Replace i386_frame_find_saved_regs.
        * i386-tdep.c (i386_frame_init_saved_regs, i386_pop_frame):
        Update.

Tue Feb 29 23:56:41 2000  Andrew Cagney  <cagney@b1.cygnus.com>
