@@ -1,3 +1,10 @@
+2000-03-02  Nick Duffek  <nsd@cygnus.com>
+
+	* uw-thread.c: Apply GNU conventions to comment formatting.
+	(deactivate_uw_thread): Call remove_thread_event_breakpoints().
+	(uw_thread_mourn_inferior): Move remove_thread_event_breakpoints()
+	call to deactivate_uw_thread().
+
 Thu Mar  2 09:04:46 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* MAINTAINERS: Daniel Berlin is C++ maintainer.		
